styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");

body {
  background: #e5e5e5;
}

* {
  font-family: "Poppins", sans-serif;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

a {
  color: inherit;
  text-decoration: none;
}

ul {
  list-style: none;
}

@media screen and (min-width: 375px) and (max-width: 768px) {
  nav {
    background-color: #fff;
    width: 100%;
    height: 73px;
    position: absolute;
    display: flex;
    justify-content: space-between;
    align-items: center;
    top: 0;
    left: 0;
    padding: 26px 24px;
  }

  .my-logo {
    font-weight: 700;
    font-size: 18px;
    line-height: 20px;
    color: #6070ff;
  }

  .menu {
    padding: 0;
    border: none;
    background: none;
  }

  .headline_section {
    background-image: url("./images/background.jpg");
    background-repeat: no-repeat;
    margin-top: 72px;
    background-size: 100%;
    border-bottom-left-radius: 100px;
    justify-content: center;
    height: 718px;
    width: 100%;
    background-color: #fff;
    display: flex;
    align-items: start;
  }

  .div-main {
    margin-top: 100px;
    padding: 0 24px;
  }

  h1 {
    font-size: 40px;
    font-style: normal;
    line-height: 52px;
    font-weight: 700;
    margin-bottom: 12px;
    color: #172b4d;
  }

  .capability {
    line-height: 24px;
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    text-align: justify;
    margin-bottom: 12px;
    color: #344563;
  }

  .social-contact {
    line-height: 24px;
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    margin-bottom: 12px;
    color: #7f8cff;
  }

  .social-icons {
    display: flex;
    align-items: center;
    gap: 12px;
  }

  .social-icon-list {
    list-style-type: none;
    display: inline;
  }

  .img-icon {
    padding: 8px;
  }

  .works {
    display: grid;
    padding: 24px;
    margin-top: 90px;
    justify-content: center;
    gap: 88px;
    align-items: center;
    width: 100%;
  }

  .content {
    display: flex;
    flex-direction: column;
    border: 1px solid #dfe1e6;
    border-radius: 16px;
    width: inherit;
    gap: 12px;
    align-items: start;
    background: #fff;
    padding: 16px;
  }

  .content-picture {
    width: inherit;
  }

  .content-body {
    align-items: start;
    gap: 20px;
    display: flex;
    flex-direction: column;
  }

  .layout {
    align-items: center;
    display: flex;
    justify-content: space-evenly;
    gap: 12px;
  }

  .content-title {
    font-weight: 700;
    color: #172b4d;
    font-style: normal;
    font-size: 32px;
  }

  .call {
    color: #344563;
    font-style: normal;
    font-size: 13px;
    font-weight: 600;
  }

  .profession {
    color: #7a869a;
    font-style: normal;
    font-size: 13px;
    font-weight: 600;
  }

  .year {
    color: #7a869a;
    font-style: normal;
    font-size: 13px;
    font-weight: 600;
  }

  .job-explanation {
    color: #344563;
    font-style: normal;
    font-size: 15px;
    font-weight: 400;
  }

  .programming {
    display: flex;
    align-items: center;
    gap: 8px;
  }

  .platform {
    color: #6070ff;
    background: #ebebff;
    padding: 4px 12px;
    letter-spacing: 0.03em;
    border-radius: 8px;
    font-style: normal;
    font-size: 12px;
    font-weight: 500;
  }

  .content-view-button {
    color: #396df2;
    font-style: normal;
    font-size: 17px;
    font-weight: 500;
    border: 1px solid #6070ff;
    border-radius: 8px;
    padding: 12px;
    background: #fff;
    display: flex;
    align-items: center;
    text-align: center;
    letter-spacing: 0.03em;
  }

  .content-view-button:focus {
    background: #2230d2;
    color: #fff;
  }

  .content-view-button:hover {
    background: #6070ff;
    color: #fff;
  }

  .content-view-button:disabled {
    border: 1px solid #c1c7d0;
    color: #5e6c84;
  }

  .about-me {
    display: flex;
    flex-direction: column;
    margin-top: 114px;
    background-color: #fff;
    height: 1450px;
    margin-bottom: -200px;
    border-radius: 0 100px 0 0;
    padding: 24px;
  }

  .get-resume {
    color: #396df2;
    font-style: normal;
    font-size: 17px;
    font-weight: 500;
    text-align: center;
    letter-spacing: 0.03em;
    display: flex;
    align-items: center;
    background: #fff;
    border: 1px solid #6070ff;
    border-radius: 8px;
    margin-top: 34px;
    margin-bottom: 60px;
    padding: 12px;
  }

  .get-resume:focus {
    color: #fff;
    background: #2230d2;
  }

  .get-resume:hover {
    color: #fff;
    background: #6070ff;
  }

  .get-resume:disabled {
    color: #5e6c84;
    border: 1px solid #c1c7d0;
  }

  .knowledge {
    padding: 0 24px;
  }

  .knowledge-name {
    font-style: normal;
    font-size: 20px;
    font-weight: 500;
  }

  .knowledge-item {
    align-items: center;
    justify-content: space-between;
    display: flex;
  }

  .knowledge-summary {
    margin-top: 36px;
    background: #f7f7f9;
    border-radius: 8px;
    display: flex;
    align-items: center;
    padding: 12px 9px;
    gap: 16px;
    margin-bottom: 12px;
  }

  hr {
    background: #dfe1e6;
    margin-bottom: 24px;
    margin-top: 23px;
  }

  .knowledge-summary > p {
    font-style: normal;
    font-weight: 500;
    font-size: 15px;
    line-height: 20px;
  }

  .separate-style {
    margin-top: 24px;
  }
}

